project/mysql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  namespace: blog
  labels:
    app: blog
    component: backend
spec:
  serviceName: "mysql-service"
  replicas: 1
  selector:
    matchLabels:
      app: blog
      component: backend
  template:
    metadata:
      labels:
        app: blog
        component: backend
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
