project/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: blog
  labels:
    app: blog
    component: backend
spec:
  selector:
    app: blog
    component: backend
  ports:
  - port: 3306
    targetPort: 3306
    name: mysql
  clusterIP: None
